Wed Aug 13 13:25:14 2003  Diego Sevilla  <dsevilla@ditec.um.es>

	* CIDLC/cidlc.mpc: Reordered static library list to suit
	  dependencies.

Wed Aug 13 12:20:12 2003  George Edwards <g.edwards@vanderbilt.edu>

        * tools/XML_Helpers/Cascadable_DocHandler.cpp:

          Added #include ace/Log_Msg.h to fix compilation error.

Wed Aug 13 10:49:14 2003  George Edwards <g.edwards@vanderbilt.edu>

        * ciao/Container_Base.h:
        * ciao/Container_Base.cpp:
        * ciao/Container_Base.inl:

          Added _ciao_the_ORB () method to CIAO::Container to access the
          container's underlying ORB.
          Changed the_POA () method to _ciao_the_POA ().

Wed Aug 13 10:42:12 2003  George Edwards <g.edwards@vanderbilt.edu>

        * examples/handcrafted/BasicSP_EC/BMClosedED/BMClosedED_svnt.h:
        * examples/handcrafted/BasicSP_EC/BMDevice/BMDevice_svnt.h:
        * examples/handcrafted/BasicSP_EC/BMDisplay/BMDisplay_svnt.h:
        * examples/handcrafted/BasicSP_EC/EC/EC_svnt.h:
        * examples/handcrafted/BasicSP_EC2/BMClosedED/BMClosedED_svnt.h:
        * examples/handcrafted/BasicSP_EC2/BMDevice/BMDevice_svnt.h:
        * examples/handcrafted/BasicSP_EC2/BMDisplay/BMDisplay_svnt.h:
        * examples/handcrafted/BasicSP_EC2/EC/EC_svnt.h:
        * examples/handcrafted/BasicSP_EC2/RTEventService/RTEventService_svnt.h:

          Added /**/ to pre.h and post.h includes.

Tue Aug 12 21:56:42 2003 Arvind S. Krishna <arvindk@dre.vanderbilt.edu>

        * tools/XML_Helper/Assembly_Spec.h:
          Fixed compilation error from a missing
          #include "ace/Null_Mutex.h".

2003-08-12  Diego Sevilla  <dsevilla@ditec.um.es>

	* CIAO.mwc: Removed CCF MPC files as they still don't work the way
	  I expected it to.

2003-08-11  Diego Sevilla  <dsevilla@ditec.um.es>

	* CIDLC/ServantGenerator.cpp: Removed commented code.

2003-08-07  Diego Sevilla  <dsevilla@ditec.um.es>

	* CCF/Example/CodeGenerationKit/Indentation/IDL/IDL.mpc: